# perceptor

./: .dockerignore  .env.example  .gitignore  404.html  ARCHITECTURE.md  CHECKPOINT.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  search.html
.github/: pull_request_template.md
OUTSTANDING_ITEMS/: index.html
artifact-coverage-matrix/: index.html
deep-recovery-profiles/: index.html
dependencies/: index.html
docs/: OUTSTANDING_ITEMS.md  architecture.md  artifact-coverage-matrix.md  deep-recovery-profiles.md  dependencies.md  future-features.md  index.md  mounted-image-notes.md  reference-review-recommendations.md  release-checklist.md  report-specs.md  rocba-mounting.md  standalone-pre-ui.md  ubuntu-install.md  user-manual.md  vsc-sidecar.md  windows-full-artifacts.md
forensic_orchestrator/: activity_contract.py  analytics.py  analytics_query.py  artifact_correlations.py  artifact_dedupe.py  artifact_distinct.py  bits_activity.py  cli.py  common_dialog.py  common_dialog_resolution.py  computer_inventory.py  config.py  copied_indicators.py  correlation.py  correlation_framework.py  db.py  deleted_file_recovery.py  encryption_preflight.py  evidence.py  evidence_sources.py  filesystem_inventory.py  filesystem_review.py  image_integrity.py  image_metadata.py  interesting_executables.py  investigation_graph.py  jobs.py  logging_config.py  mcp_http.py  mcp_server.py  models.py  namespace_reconcile.py  nested_evidence.py  paths.py  pidl.py  processing_scheduler.py  report_bundle.py  report_paths.py  (+15 more)
(+263 files in other folders)
