[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-orchestrator"
version = "0.1.0"
description = "CLI-first forensic processing orchestration MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "cerberus>=1.3.8",
  "dissect-cstruct>=4",
  "dissect.esedb>=3.18",
  "dissect-etl>=3.9",
  "dissect.thumbcache>=1.11",
  "duckdb>=1.5.2",
  "lxml>=6.1.0",
  "lz4>=4.4.0",
  "numpy==2.2.6",
  "pandas==2.2.3",
  "plyvel>=1.5.1",
  "pycryptodome>=3.23.0",
  "python-magic>=0.4.27",
  "python-registry>=1.3.1",
  "PyYAML>=6.0",
  "quickxorhash>=1.0.5",
  "ruamel-yaml>=0.19.1",
  "pypdf>=6.12.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
forensic-orchestrator = "forensic_orchestrator.cli:main"

[tool.setuptools.packages.find]
include = ["forensic_orchestrator*"]

[tool.setuptools.package-data]
forensic_orchestrator = ["plugins/*.yaml", "plugins/*.reb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
